--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -34,3 +34,9 @@ $size-typo-heading-page: 2.5rem;
 $size-typo-heading-menu: 3.2rem;
 $size-typo-text-menu: 1.5em;
 $size-typo-label: 2rem;
+
+//Responsive
+
+//Breakpoints
+
+$breakpoints: (mobile: 425px, tablette: 768px);
