--- a/layouts/_footer.scss
+++ b/layouts/_footer.scss
@@ -1,8 +1,8 @@
-// Pieds de page
+//Pieds de page
 
 .footer {
   display: grid;
-  grid-template: 1fr 1fr 1fr/30% 40% 30%;
+  grid-template: 1fr 1fr 1fr/47.5% 5% 47.5%;
   height: 7em;
   width: 100%;
   background-color: $color-primary;
@@ -23,6 +23,29 @@
       padding-right: 2em;
       grid-column: 3/4;
       grid-row: 2/3;
+    }
+  }
+}
+
+//Responsive mobile
+
+@include mobile-only {
+  .footer {
+    grid-template: 1fr 2fr 2fr 2fr 1fr/10% 80% 10%;
+    position: initial;
+    &__btn {
+      font-size: $size-typo-footer/1.3;
+      &--mentions {
+        padding-left: 0;
+        text-align: center;
+        grid-column: 2/3;
+      }
+      &--contact {
+        padding-right: 0;
+        text-align: center;
+        grid-column: 2/3;
+        grid-row: 4/5;
+      }
     }
   }
 }
