--- a/pages/_accueil.scss
+++ b/pages/_accueil.scss
@@ -2,7 +2,7 @@
 
 .grid {
   display: grid;
-  grid-template: 6em 38em 5em 38em 5em / 8% 38% 8% 38% 8%;
+  grid-template: 5rem 38rem 5rem 38rem 5rem / 8% 38% 8% 38% 8%;
   .card {
     display: flex;
     flex-direction: column;
@@ -20,34 +20,87 @@
         font-size: $size-typo-card;
         .title {
           font-size: $size-typo-heading-card;
-          }
-        }
-        &--in {
-          font-size: $size-typo-card*1.8;
-          .title {
-            font-size: $size-typo-heading-card*1.8;
-            }
         }
       }
+      &--in {
+        font-size: $size-typo-card * 1.8;
+        .title {
+          font-size: $size-typo-heading-card * 1.8;
+        }
+      }
+    }
     &--1 {
       background-color: $color-menu-1;
       grid-column: 2/3;
       grid-row: 2/3;
+      i {
+        background: linear-gradient(
+          90deg,
+          rgba(221, 81, 46, 1) 13%,
+          rgba(251, 149, 94, 1) 56%,
+          rgba(254, 204, 177, 1) 98%
+        );
+        @include gradient-text;
+      }
+      .title,
+      p {
+        background: rgba(0, 0, 0, 0.8);
+        @include gradient-text;
+      }
     }
     &--2 {
       background-color: $color-menu-2;
       grid-column: 4/5;
       grid-row: 2/3;
+      .title {
+        background: rgb(187, 94, 0);
+        background: linear-gradient(
+          162deg,
+          rgba(187, 94, 0, 1) 34%,
+          rgba(124, 0, 255, 1) 70%
+        );
+        @include gradient-text;
+      }
+      p {
+        background-color: #bb5e00;
+        @include gradient-text;
+      }
     }
     &--3 {
       background-color: $color-menu-3;
       grid-column: 2/3;
       grid-row: 4/5;
+      .title {
+        background: rgb(0, 40, 166);
+        background: linear-gradient(
+          152deg,
+          rgba(0, 39, 166, 0.945) 42%,
+          rgba(60, 164, 228, 0.979) 73%
+        );
+        @include gradient-text;
+      }
+      p {
+        background-color: #2176e6f8;
+        @include gradient-text;
+      }
     }
     &--4 {
       background-color: $color-menu-4;
       grid-column: 4/5;
       grid-row: 4/5;
+      .title {
+        background: rgb(13, 145, 0);
+        background: linear-gradient(
+          135deg,
+          rgba(13, 145, 0, 0.8155856092436975) 35%,
+          rgba(33, 195, 14, 0.33939513305322133) 70%
+        );
+        @include gradient-text;
+      }
+      p {
+        background-color: #2ba120c2;
+        @include gradient-text;
+      }
     }
   }
 }
@@ -56,7 +109,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10em;
+  margin-bottom: 10rem;
   &__heading {
     display: flex;
     justify-content: center;
@@ -70,5 +123,83 @@
     height: 1.8em;
     padding-top: 0.1em;
     padding-bottom: 0.1em;
+  }
+}
+
+//Responsive tablette
+
+@include tablette-only {
+  .grid {
+    grid-template: 5rem 36rem 5rem 36rem 5rem 36rem 5rem 36rem 5rem/ 10% 80% 10%;
+    .card {
+      &--1 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+      }
+      &--2 {
+        grid-column: 2/3;
+        grid-row: 4/5;
+      }
+      &--3 {
+        grid-column: 2/3;
+        grid-row: 6/7;
+      }
+      &--4 {
+        grid-column: 2/3;
+        grid-row: 8/9;
+      }
+    }
+  }
+  .next {
+    margin-bottom: 8rem;
+    &__heading {
+      font-size: $size-typo-next/1.8;
+    }
+  }
+}
+
+//Responsive mobile
+
+@include mobile-only {
+  .grid {
+    grid-template: 5rem 28rem 5rem 28rem 5rem 28rem 5rem 28rem 5rem/ 5% 90% 5%;
+    .card {
+      &__content {
+        &--out {
+          font-size: $size-typo-card;
+          .title {
+            font-size: $size-typo-heading-card;
+          }
+        }
+        &--in {
+          font-size: ($size-typo-card * 1.8)/1.4;
+          .title {
+            font-size: ($size-typo-heading-card * 1.8)/1.4;
+          }
+        }
+      }
+      &--1 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+      }
+      &--2 {
+        grid-column: 2/3;
+        grid-row: 4/5;
+      }
+      &--3 {
+        grid-column: 2/3;
+        grid-row: 6/7;
+      }
+      &--4 {
+        grid-column: 2/3;
+        grid-row: 8/9;
+      }
+    }
+  }
+  .next {
+    margin-bottom: 0;
+    &__heading {
+      font-size: $size-typo-next/2;
+    }
   }
 }
