--- a/pages/_palette.scss
+++ b/pages/_palette.scss
@@ -2,5 +2,17 @@
     @include menu-format;
     &.menu--4 {
       background-color: $color-menu-4;
+      background: radial-gradient(circle, rgba(33,195,14,0.33939513305322133) 21%, rgba(13,145,0,0.8155856092436975) 65%);
+      @include gradient-text;
+      .menu__heading {
+        font-size: $size-typo-heading-menu*1.8;
+        font-weight: normal;
+        background: linear-gradient(135deg, rgba(12, 145, 0, 0.459) 35%, rgba(117, 228, 105, 0.863) 70%);
+        @include gradient-text;
+      }
+      .menu__text, span {
+        background: rgba(0, 0, 0, 0.8);
+        @include gradient-text
+      }
     }
   }
