--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -32,11 +32,11 @@ $size-typo-heading-card: 1.7rem;
 $size-typo-card: 1.6rem;
 $size-typo-heading-page: 2.5rem;
 $size-typo-heading-menu: 3.2rem;
-$size-typo-text-menu: 1.5em;
+$size-typo-text-menu: 1.5rem;
 $size-typo-label: 2rem;
 
 //Responsive
 
 //Breakpoints
 
-$breakpoints: (mobile: 425px, tablette: 768px);
+$breakpoints: (mobile: 490px, tablette: 768px);
