--- a/layouts/_footer.scss
+++ b/layouts/_footer.scss
@@ -20,6 +20,7 @@
       grid-row: 2/3;
     }
     &--contact {
+      text-align: right;
       padding-right: 2em;
       grid-column: 3/4;
       grid-row: 2/3;
