--- a/main.css
+++ b/main.css
@@ -267,16 +267,16 @@ body {
   font-size: 6em;
 }
 
-@media (min-width: 425px) and (max-width: 768px) {
+@media (min-width: 490px) and (max-width: 768px) {
   .header {
     height: 11em;
   }
   .header__heading {
-    font-size: 3.33333em;
+    font-size: 4.28571em;
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 490px) {
   .header {
     height: 8rem;
   }
@@ -318,6 +318,7 @@ body {
 }
 
 .footer__btn--contact {
+  text-align: right;
   padding-right: 2em;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
@@ -327,7 +328,7 @@ body {
   grid-row: 2/3;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 490px) {
   .footer {
     -ms-grid-rows: 1fr 2fr 2fr 2fr 1fr;
     -ms-grid-columns: 10% 80% 10%;
@@ -370,7 +371,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 12em;
+  margin-bottom: 12rem;
 }
 
 .page__heading {
@@ -575,7 +576,7 @@ body {
   padding-bottom: 0.1em;
 }
 
-@media (min-width: 425px) and (max-width: 768px) {
+@media (min-width: 490px) and (max-width: 768px) {
   .grid {
     -ms-grid-rows: 5rem 36rem 5rem 36rem 5rem 36rem 5rem 36rem 5rem;
     -ms-grid-columns: 10% 80% 10%;
@@ -621,23 +622,23 @@ body {
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 490px) {
   .grid {
     -ms-grid-rows: 5rem 28rem 5rem 28rem 5rem 28rem 5rem 28rem 5rem;
     -ms-grid-columns: 5% 90% 5%;
         grid-template: 5rem 28rem 5rem 28rem 5rem 28rem 5rem 28rem 5rem/ 5% 90% 5%;
   }
   .grid .card__content--out {
-    font-size: 1.6rem;
+    font-size: 1.33333rem;
   }
   .grid .card__content--out .title {
-    font-size: 1.7rem;
+    font-size: 1.41667rem;
   }
   .grid .card__content--in {
     font-size: 2.05714rem;
   }
   .grid .card__content--in .title {
-    font-size: 2.18571rem;
+    font-size: 2.04rem;
   }
   .grid .card--1 {
     -ms-grid-column: 2;
@@ -675,7 +676,8 @@ body {
     margin-bottom: 0;
   }
   .next__heading {
-    font-size: 2em;
+    margin-top: 0;
+    font-size: 1.81818em;
   }
 }
 
@@ -693,46 +695,60 @@ body {
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
-  max-width: 85%;
+  width: 70%;
 }
 
 .menu__heading {
+  text-align: center;
   font-size: 3.2rem;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
-.menu h3 {
+.menu__text {
+  font-size: 1.5rem;
+}
+
+.menu .menu__content h3 {
   margin: 0;
-  text-align: center;
 }
 
-.menu b {
+.menu .menu__content b {
+  display: block;
   text-align: center;
-  padding-top: 3em;
+  padding-top: 2.5em;
   padding-bottom: 0.5em;
   font-size: 2rem;
   clear: both;
 }
 
-.menu .underline {
+.menu .menu__content .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 200ms ease-in-out;
-  transition: background-size 200ms ease-in-out;
+  -webkit-transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
+  transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
 }
 
-.menu .underline:hover {
+.menu .menu__content .underline:hover {
   background-size: 100% 100%;
 }
 
-.menu__text {
-  font-size: 1.5em;
-}
-
-.menu .price {
+.menu .menu__content .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
+}
+
+@media (min-width: 490px) and (max-width: 768px) {
+  .menu p {
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 490px) {
+  .menu p {
+    margin-bottom: 3rem;
+  }
 }
 
 .menu.menu--1 {
@@ -793,60 +809,77 @@ h4 {
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
-  max-width: 85%;
+  width: 70%;
 }
 
 .menu__heading {
+  text-align: center;
   font-size: 3.2rem;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
-.menu h3 {
+.menu__text {
+  font-size: 1.5rem;
+}
+
+.menu .menu__content h3 {
   margin: 0;
-  text-align: center;
 }
 
-.menu b {
+.menu .menu__content b {
+  display: block;
   text-align: center;
-  padding-top: 3em;
+  padding-top: 2.5em;
   padding-bottom: 0.5em;
   font-size: 2rem;
   clear: both;
 }
 
-.menu .underline {
+.menu .menu__content .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 200ms ease-in-out;
-  transition: background-size 200ms ease-in-out;
+  -webkit-transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
+  transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
 }
 
-.menu .underline:hover {
+.menu .menu__content .underline:hover {
   background-size: 100% 100%;
 }
 
-.menu__text {
-  font-size: 1.5em;
-}
-
-.menu .price {
+.menu .menu__content .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
 }
 
+@media (min-width: 490px) and (max-width: 768px) {
+  .menu p {
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 490px) {
+  .menu p {
+    margin-bottom: 3rem;
+  }
+}
+
 .menu.menu--2 {
   background-color: #FFF5FE;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(34%, rgba(187, 93, 0, 0.671)), color-stop(70%, rgba(35, 0, 161, 0.568)));
-  background: linear-gradient(180deg, rgba(187, 93, 0, 0.671) 34%, rgba(35, 0, 161, 0.568) 70%);
+}
+
+.menu.menu--2 .menu__heading {
+  font-size: 4.16rem;
+  background: linear-gradient(162deg, rgba(187, 93, 0, 0.671) 34%, rgba(35, 0, 161, 0.568) 70%);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
 }
 
-.menu.menu--2 .menu__heading {
-  font-size: 4.16rem;
-  background: linear-gradient(162deg, rgba(187, 93, 0, 0.651) 24%, rgba(147, 41, 233, 0.548) 60%);
+.menu.menu--2 .menu__content {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(34%, rgba(187, 93, 0, 0.671)), color-stop(70%, rgba(35, 0, 161, 0.568)));
+  background: linear-gradient(180deg, rgba(187, 93, 0, 0.671) 34%, rgba(35, 0, 161, 0.568) 70%);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
@@ -866,55 +899,64 @@ h4 {
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
-  max-width: 85%;
+  width: 70%;
 }
 
 .menu__heading {
+  text-align: center;
   font-size: 3.2rem;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
-.menu h3 {
+.menu__text {
+  font-size: 1.5rem;
+}
+
+.menu .menu__content h3 {
   margin: 0;
-  text-align: center;
 }
 
-.menu b {
+.menu .menu__content b {
+  display: block;
   text-align: center;
-  padding-top: 3em;
+  padding-top: 2.5em;
   padding-bottom: 0.5em;
   font-size: 2rem;
   clear: both;
 }
 
-.menu .underline {
+.menu .menu__content .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 200ms ease-in-out;
-  transition: background-size 200ms ease-in-out;
+  -webkit-transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
+  transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
 }
 
-.menu .underline:hover {
+.menu .menu__content .underline:hover {
   background-size: 100% 100%;
 }
 
-.menu__text {
-  font-size: 1.5em;
-}
-
-.menu .price {
+.menu .menu__content .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
 }
 
+@media (min-width: 490px) and (max-width: 768px) {
+  .menu p {
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 490px) {
+  .menu p {
+    margin-bottom: 3rem;
+  }
+}
+
 .menu.menu--3 {
   background-color: #F9F9F9;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(42%, rgba(0, 40, 166, 0.866006)), color-stop(73%, rgba(60, 165, 228, 0.924829)));
-  background: linear-gradient(180deg, rgba(0, 40, 166, 0.866006) 42%, rgba(60, 165, 228, 0.924829) 73%);
-  color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
 }
 
 .menu.menu--3 .menu__heading {
@@ -927,11 +969,17 @@ h4 {
   -webkit-background-clip: text;
 }
 
-.menu.menu--3 .menu__text, .menu.menu--3 span {
-  background: rgba(0, 0, 0, 0.8);
+.menu.menu--3 .menu__content {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(42%, rgba(0, 40, 166, 0.866006)), color-stop(73%, rgba(60, 165, 228, 0.924829)));
+  background: linear-gradient(180deg, rgba(0, 40, 166, 0.866006) 42%, rgba(60, 165, 228, 0.924829) 73%);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
+}
+
+.menu.menu--3 .menu__text,
+.menu.menu--3 span {
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .menu {
@@ -948,66 +996,85 @@ h4 {
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
-  max-width: 85%;
+  width: 70%;
 }
 
 .menu__heading {
+  text-align: center;
   font-size: 3.2rem;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
-.menu h3 {
+.menu__text {
+  font-size: 1.5rem;
+}
+
+.menu .menu__content h3 {
   margin: 0;
-  text-align: center;
 }
 
-.menu b {
+.menu .menu__content b {
+  display: block;
   text-align: center;
-  padding-top: 3em;
+  padding-top: 2.5em;
   padding-bottom: 0.5em;
   font-size: 2rem;
   clear: both;
 }
 
-.menu .underline {
+.menu .menu__content .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 200ms ease-in-out;
-  transition: background-size 200ms ease-in-out;
+  -webkit-transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
+  transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
 }
 
-.menu .underline:hover {
+.menu .menu__content .underline:hover {
   background-size: 100% 100%;
 }
 
-.menu__text {
-  font-size: 1.5em;
-}
-
-.menu .price {
+.menu .menu__content .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
 }
 
+@media (min-width: 490px) and (max-width: 768px) {
+  .menu p {
+    margin-bottom: 4rem;
+  }
+}
+
+@media (max-width: 490px) {
+  .menu p {
+    margin-bottom: 3rem;
+  }
+}
+
 .menu.menu--4 {
   background-color: #FDFFFD;
+}
+
+.menu.menu--4 .menu__heading {
+  font-size: 5.76rem;
+  font-weight: normal;
+  background: #0d9100;
+  background: linear-gradient(135deg, rgba(13, 145, 0, 0.815586) 35%, rgba(33, 195, 14, 0.339395) 70%);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.menu.menu--4 .menu__content {
   background: radial-gradient(circle, rgba(33, 195, 14, 0.339395) 21%, rgba(13, 145, 0, 0.815586) 65%);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
 }
 
-.menu.menu--4 .menu__heading {
-  font-size: 5.76rem;
-  font-weight: normal;
-  background: linear-gradient(135deg, rgba(12, 145, 0, 0.459) 35%, rgba(117, 228, 105, 0.863) 70%);
-  color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-.menu.menu--4 .menu__text, .menu.menu--4 span {
+.menu.menu--4 .menu__text,
+.menu.menu--4 span {
   background: rgba(0, 0, 0, 0.8);
   color: transparent;
   background-clip: text;
