--- a/pages/_chic.scss
+++ b/pages/_chic.scss
@@ -1,17 +1,23 @@
 .menu {
-    @include menu-format;
-    &.menu--2 {
-      background-color: $color-menu-2;
-      background: linear-gradient(180deg, rgba(187, 93, 0, 0.671) 34%, rgba(35, 0, 161, 0.568) 70%);
+  @include menu-format;
+  &.menu--2 {
+    background-color: $color-menu-2;
+    .menu__heading {
+      font-size: $size-typo-heading-menu * 1.3;
+      background: linear-gradient(
+        162deg,
+        rgba(187, 93, 0, 0.671) 34%,
+        rgba(35, 0, 161, 0.568) 70%
+      );
       @include gradient-text;
-      .menu__heading {
-        font-size: $size-typo-heading-menu*1.3;
-        background: linear-gradient(
-          162deg,
-          rgba(187, 93, 0, 0.651) 24%,
-          rgba(147, 41, 233, 0.548) 60%
-        );
-        @include gradient-text;
-      }
+    }
+    .menu__content {
+      background: linear-gradient(
+        180deg,
+        rgba(187, 93, 0, 0.671) 34%,
+        rgba(35, 0, 161, 0.568) 70%
+      );
+      @include gradient-text;
     }
   }
+}
