--- a/pages/_palette.scss
+++ b/pages/_palette.scss
@@ -22,7 +22,7 @@
       @include gradient-text;
     }
     .menu__text,
-    span {
+    .price {
       background: rgba(0, 0, 0, 0.8);
       @include gradient-text;
     }
