animation menu accueil

--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -39,4 +39,4 @@ $size-typo-label: 2rem;
 
 //Breakpoints
 
-$breakpoints: (mobile: 490px, tablette: 768px);
+$breakpoints: (mobile: 490px, tablette: 768px, screen: 1023px);
