--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -1,35 +1,65 @@
 //Animation Carte des menus, accueil
 
 .card {
-  .card__content--in {
-    visibility: hidden;
-  }
-  &:hover {
-    .card__content--out {
-      animation: fadeout 1s forwards;
+  @for $i from 1 through 4 {
+    &--#{$i} {
+      .card__content {
+        opacity: 0.5;
+      }
     }
-    .card__content--in {
-      visibility: visible;
-      animation: fadein 1.5s 300ms backwards cubic-bezier(.77,.03,.41,.81);
+  }
+  &:hover > .card__content {
+    animation: fade-grow 700ms ease-in-out both;
+  }
+}
+
+@keyframes fade-grow {
+  0% {
+    transform: scale(1);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1.3);
+    opacity: 1;
+  }
+}
+
+@include screen-only {
+  @keyframes fade-grow {
+    0% {
+      transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      transform: scale(1.7);
+      opacity: 1;
     }
   }
 }
 
-@keyframes fadeout {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
+@include tablette-only {
+  @keyframes fade-grow {
+    0% {
+      transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      transform: scale(1.7);
+      opacity: 1;
+    }
   }
 }
 
-@keyframes fadein {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
+@include mobile-only {
+  @keyframes fade-grow {
+    0% {
+      transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      transform: scale(1.2);
+      opacity: 1;
+    }
   }
 }
 
