--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 body {
-  overflow-wrap: anywhere;
   color: #404040d5;
   margin: 0;
   padding: 0;
@@ -74,54 +73,131 @@ body {
   font-family: "Short Stack", sans-serif;
 }
 
-.card .card__content--in {
-  visibility: hidden;
+.card--1 .card__content {
+  opacity: 0.5;
 }
 
-.card:hover .card__content--out {
-  -webkit-animation: fadeout 1s forwards;
-          animation: fadeout 1s forwards;
+.card--2 .card__content {
+  opacity: 0.5;
 }
 
-.card:hover .card__content--in {
-  visibility: visible;
-  -webkit-animation: fadein 1.5s 300ms backwards cubic-bezier(0.77, 0.03, 0.41, 0.81);
-          animation: fadein 1.5s 300ms backwards cubic-bezier(0.77, 0.03, 0.41, 0.81);
+.card--3 .card__content {
+  opacity: 0.5;
 }
 
-@-webkit-keyframes fadeout {
+.card--4 .card__content {
+  opacity: 0.5;
+}
+
+.card:hover > .card__content {
+  -webkit-animation: fade-grow 700ms ease-in-out both;
+          animation: fade-grow 700ms ease-in-out both;
+}
+
+@-webkit-keyframes fade-grow {
   0% {
-    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0.5;
   }
   100% {
-    opacity: 0;
-  }
-}
-
-@keyframes fadeout {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@-webkit-keyframes fadein {
-  0% {
-    opacity: 0;
-  }
-  100% {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
     opacity: 1;
   }
 }
 
-@keyframes fadein {
+@keyframes fade-grow {
   0% {
-    opacity: 0;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0.5;
   }
   100% {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
     opacity: 1;
+  }
+}
+
+@media (min-width: 1023px) {
+  @-webkit-keyframes fade-grow {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      -webkit-transform: scale(1.7);
+              transform: scale(1.7);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-grow {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      -webkit-transform: scale(1.7);
+              transform: scale(1.7);
+      opacity: 1;
+    }
+  }
+}
+
+@media (min-width: 490px) and (max-width: 768px) {
+  @-webkit-keyframes fade-grow {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      -webkit-transform: scale(1.7);
+              transform: scale(1.7);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-grow {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      -webkit-transform: scale(1.7);
+              transform: scale(1.7);
+      opacity: 1;
+    }
+  }
+}
+
+@media (max-width: 490px) {
+  @-webkit-keyframes fade-grow {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-grow {
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 0.4;
+    }
+    100% {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2);
+      opacity: 1;
+    }
   }
 }
 
@@ -423,22 +499,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-}
-
-.grid .card__content--out {
   font-size: 1.6rem;
 }
 
-.grid .card__content--out .title {
+.grid .card__content .title {
   font-size: 1.7rem;
-}
-
-.grid .card__content--in {
-  font-size: 2.88rem;
-}
-
-.grid .card__content--in .title {
-  font-size: 3.06rem;
 }
 
 .grid .card--1 {
@@ -683,6 +748,7 @@ body {
 }
 
 .menu {
+  overflow-wrap: anywhere;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -748,13 +814,14 @@ body {
   width: 10%;
   display: inline;
   font-weight: bold;
-  padding-left: 2em;
+  padding-left: 2rem;
   overflow-wrap: normal;
+  margin-top: 1.5rem;
 }
 
 .menu .menu__content p {
   width: 90%;
-  margin-top: 0;
+  margin-top: 1.5rem;
 }
 
 @media (min-width: 490px) and (max-width: 768px) {
@@ -814,6 +881,7 @@ h4 {
 }
 
 .menu {
+  overflow-wrap: anywhere;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -879,13 +947,14 @@ h4 {
   width: 10%;
   display: inline;
   font-weight: bold;
-  padding-left: 2em;
+  padding-left: 2rem;
   overflow-wrap: normal;
+  margin-top: 1.5rem;
 }
 
 .menu .menu__content p {
   width: 90%;
-  margin-top: 0;
+  margin-top: 1.5rem;
 }
 
 @media (min-width: 490px) and (max-width: 768px) {
@@ -921,6 +990,7 @@ h4 {
 }
 
 .menu {
+  overflow-wrap: anywhere;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -986,13 +1056,14 @@ h4 {
   width: 10%;
   display: inline;
   font-weight: bold;
-  padding-left: 2em;
+  padding-left: 2rem;
   overflow-wrap: normal;
+  margin-top: 1.5rem;
 }
 
 .menu .menu__content p {
   width: 90%;
-  margin-top: 0;
+  margin-top: 1.5rem;
 }
 
 @media (min-width: 490px) and (max-width: 768px) {
@@ -1035,6 +1106,7 @@ h4 {
 }
 
 .menu {
+  overflow-wrap: anywhere;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1100,13 +1172,14 @@ h4 {
   width: 10%;
   display: inline;
   font-weight: bold;
-  padding-left: 2em;
+  padding-left: 2rem;
   overflow-wrap: normal;
+  margin-top: 1.5rem;
 }
 
 .menu .menu__content p {
   width: 90%;
-  margin-top: 0;
+  margin-top: 1.5rem;
 }
 
 @media (min-width: 490px) and (max-width: 768px) {
