--- a/utils/_mixins.scss
+++ b/utils/_mixins.scss
@@ -19,6 +19,7 @@
 //Standard menu
 
 @mixin menu-format {
+  overflow-wrap: anywhere;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -68,12 +69,13 @@
       width: 10%;
       display: inline;
       font-weight: bold;
-      padding-left: 2em;
+      padding-left: 2rem;
       overflow-wrap: normal;
+      margin-top: 1.5rem;
     }
     p {
       width: 90%;
-      margin-top: 0;
+      margin-top: 1.5rem;
     }
   }
   @include tablette-only {
@@ -94,6 +96,14 @@
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
+}
+
+//Responsive écran large
+
+@mixin screen-only {
+  @media (min-width: map-get($breakpoints, screen)) {
+    @content;
+  }
 }
 
 //Responsive Tablette
