Dégradé ornements menu dédié

--- a/main.scss
+++ b/main.scss
@@ -8,6 +8,7 @@
 @import "./layouts/header";
 @import "./layouts/footer";
 @import "./layouts/page";
+@import "./layouts/menu";
 @import "./pages/accueil";
 @import "./pages/note";
 @import "./pages/chic";
