--- a/pages/_chic.scss
+++ b/pages/_chic.scss
@@ -1,23 +1,76 @@
-.menu {
-  @include menu-format;
-  &.menu--2 {
-    background-color: $color-menu-2;
-    .menu__heading {
-      font-size: $size-typo-heading-menu * 1.3;
-      background: linear-gradient(
-        162deg,
-        rgba(187, 93, 0, 0.671) 34%,
-        rgba(35, 0, 161, 0.568) 70%
-      );
-      @include gradient-text;
+.menu--2 {
+  background-color: $color-menu-2;
+  .menu__heading {
+    font-size: $size-typo-heading-menu * 1.3;
+    background: linear-gradient(
+      162deg,
+      rgba(187, 93, 0, 0.671) 34%,
+      rgba(35, 0, 161, 0.568) 70%
+    );
+    @include gradient-text;
+  }
+  .underline {
+    background: linear-gradient(
+        to top,
+        rgba(187, 93, 0, 0.671) 0%,
+        rgba(35, 0, 161, 0.568) 0.1rem,
+        transparent 2px
+      )
+      no-repeat;
+    background-size: 0% 100%;
+    transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
+    &:hover {
+      background-size: 100% 100%;
     }
-    .menu__content {
-      background: linear-gradient(
-        180deg,
-        rgba(187, 93, 0, 0.671) 34%,
-        rgba(35, 0, 161, 0.568) 70%
-      );
-      @include gradient-text;
-    }
+  }
+  .menu__content {
+    background: linear-gradient(
+      180deg,
+      rgba(187, 93, 0, 0.671) 34%,
+      rgba(35, 0, 161, 0.568) 70%
+    );
+    @include gradient-text;
+  }
+  .break--1::before {
+    border-top: 0.5rem solid;
+    color: #D29054;
+    content: "";
+    flex: 1;
+    margin: 0 3rem 0 0;
+  }
+  .break--1::after {
+    border-top: 0.5rem solid;
+    color: #D29054;
+    content: "";
+    flex: 1;
+    margin: 0 0 0 5rem;
+  }
+  .break--2::before {
+    border-top: 0.5rem solid;
+    color: #BF866F;
+    content: "";
+    flex: 1;
+    margin: 0 3rem 0 0;
+  }
+  .break--2::after {
+    border-top: 0.5rem solid;
+    color: #BF866F;
+    content: "";
+    flex: 1;
+    margin: 0 0 0 3rem;
+  }
+  .break--3::before {
+    border-top: 0.5rem solid;
+    color: #826ACA;
+    content: "";
+    flex: 1;
+    margin: 0 1rem 0 0;
+  }
+  .break--3::after {
+    border-top: 0.5rem solid;
+    color: #826ACA;
+    content: "";
+    flex: 1;
+    margin: 0 0 0 1rem;
   }
 }
