--- a/pages/_palette.scss
+++ b/pages/_palette.scss
@@ -1,30 +1,86 @@
-.menu {
-  @include menu-format;
-  &.menu--4 {
-    background-color: $color-menu-4;
-    .menu__heading {
-      font-size: $size-typo-heading-menu * 1.8;
-      font-weight: normal;
-      background: rgb(13, 145, 0);
-      background: linear-gradient(
-        135deg,
-        rgba(13, 145, 0, 0.8155856092436975) 35%,
-        rgba(33, 195, 14, 0.33939513305322133) 70%
-      );
-      @include gradient-text;
+.menu--4 {
+  background-color: $color-menu-4;
+  .menu__heading {
+    font-size: $size-typo-heading-menu * 1.5;
+    font-weight: normal;
+    background: rgb(13, 145, 0);
+    background: linear-gradient(
+      135deg,
+      rgba(13, 145, 0, 0.8155856092436975) 35%,
+      rgba(33, 195, 14, 0.33939513305322133) 70%
+    );
+    @include gradient-text;
+  }
+  .underline {
+    background: linear-gradient(
+        to top,
+        rgba(13, 145, 0, 0.8155856092436975) 0%,
+        rgba(33, 195, 14, 0.33939513305322133) 0.1rem,
+        transparent 2px
+      )
+      no-repeat;
+    background-size: 0% 100%;
+    transition: background-size 400ms cubic-bezier(0.5, 0.02, 0.04, 0.98);
+    &:hover {
+      background-size: 100% 100%;
     }
-    .menu__content {
-      background: radial-gradient(
-        circle,
-        rgba(33, 195, 14, 0.33939513305322133) 21%,
-        rgba(13, 145, 0, 0.8155856092436975) 65%
-      );
-      @include gradient-text;
-    }
-    .menu__text,
-    .price {
-      background: rgba(0, 0, 0, 0.8);
-      @include gradient-text;
-    }
+  }
+  .menu__content {
+    background: radial-gradient(
+      circle,
+      rgba(33, 195, 14, 0.33939513305322133) 21%,
+      rgba(13, 145, 0, 0.8155856092436975) 65%
+    );
+    @include gradient-text;
+  }
+  .menu__text,
+  .price, .underline {
+    color: #404040d5;
+  }
+  .break--1::before {
+    border-top: 0.5rem solid;
+    content: "";
+    background: linear-gradient(
+      135deg,
+      rgba(13, 145, 0, 0.8155856092436975) 35%,
+      rgba(33, 195, 14, 0.33939513305322133) 70%
+    );
+    flex: 1;
+    margin: 0 5rem 0 0;
+  }
+  .break--1::after {
+    border-top: 0.5rem solid;
+    color: #404040d5;
+    content: "";
+    flex: 1;
+    margin: 0 0 0 5rem;
+  }
+  .break--2::before {
+    border-top: 0.5rem solid;
+    color: #404040d5;
+    content: "";
+    flex: 1;
+    margin: 0 3rem 0 0;
+  }
+  .break--2::after {
+    border-top: 0.5rem solid;
+    color: #404040d5;
+    content: "";
+    flex: 1;
+    margin: 0 0 0 3rem;
+  }
+  .break--3::before {
+    border-top: 0.5rem solid;
+    color: #404040d5;
+    content: "";
+    flex: 1;
+    margin: 0 1rem 0 0;
+  }
+  .break--3::after {
+    border-top: 0.5rem solid;
+    color: #404040d5;
+    content: "";
+    flex: 1;
+    margin: 0 0 0 1rem;
   }
 }
