--- a/layouts/_menu.scss
+++ b/layouts/_menu.scss
@@ -1,3 +1,59 @@
 .menu {
-  @include menu-format;
+  overflow-wrap: break-word;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5rem 5rem 5rem 5rem;
+  box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
+  width: 70%;
+  &__heading {
+    overflow-wrap: normal;
+    text-align: center;
+    font-size: $size-typo-heading-menu;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+  &__text {
+    font-size: $size-typo-text-menu;
+  }
+  .menu__content {
+    h3 {
+      margin: 0;
+    }
+    .break {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin-top: 6rem;
+      margin-bottom: 3rem;
+      font-size: $size-typo-label;
+    }
+    .text-line {
+      display: flex;
+      flex-direction: row;
+    }
+    .price {
+      display: inline;
+      font-weight: bold;
+      padding-left: 2rem;
+      overflow-wrap: normal;
+      margin-top: 1.5rem;
+    }
+    p {
+      width: 90%;
+      margin-top: 1.5rem;
+    }
+  }
+  @include tablette-only {
+    p {
+      margin-bottom: 4rem;
+    }
+  }
+  @include mobile-only {
+    padding: 2rem 2rem 2rem 2rem;
+    p {
+      margin-bottom: 3rem;
+    }
+  }
 }
