--- a/layouts/_page.scss
+++ b/layouts/_page.scss
@@ -1,6 +1,12 @@
 .page {
-  @include page-format;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 12rem;
   &__heading {
-    @include page-heading-format;
+    font-size: $size-typo-heading-page;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
   }
 }
