--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
   font-family: "Devonshire", sans-serif;
 }
 
-.card.card--1 .title {
+.card.card--1 .card__heading {
   font-family: "Devonshire", sans-serif;
 }
 
@@ -33,7 +33,7 @@ body {
   font-family: "Montez", sans-serif;
 }
 
-.card.card--2 .title {
+.card.card--2 .card__heading {
   font-family: "Montez", sans-serif;
 }
 
@@ -49,7 +49,7 @@ body {
   font-family: "Dancing Script", sans-serif;
 }
 
-.card.card--3 .title {
+.card.card--3 .card__heading {
   font-family: "Dancing Script", sans-serif;
 }
 
@@ -65,7 +65,7 @@ body {
   font-family: "Courgette", sans-serif;
 }
 
-.card.card--4 .title {
+.card.card--4 .card__heading {
   font-family: "Courgette", sans-serif;
 }
 
@@ -203,7 +203,6 @@ body {
 
 .next__heading .next__dot {
   visibility: hidden;
-  display: inline;
 }
 
 .next__heading:hover .next__dot {
@@ -231,15 +230,6 @@ body {
   0% {
     opacity: 0;
   }
-  33% {
-    opacity: 0.3;
-  }
-  66% {
-    opacity: 0.6;
-  }
-  75% {
-    opacity: 0.8;
-  }
   100% {
     opacity: 1;
   }
@@ -248,15 +238,6 @@ body {
 @keyframes dots {
   0% {
     opacity: 0;
-  }
-  33% {
-    opacity: 0.3;
-  }
-  66% {
-    opacity: 0.6;
-  }
-  75% {
-    opacity: 0.8;
   }
   100% {
     opacity: 1;
@@ -530,10 +511,6 @@ body {
   margin-top: 1.5rem;
 }
 
-.menu .menu__content .underline {
-  padding: 0 0.5rem;
-}
-
 @media (min-width: 490px) and (max-width: 768px) {
   .menu p {
     margin-bottom: 4rem;
@@ -546,9 +523,6 @@ body {
   }
   .menu p {
     margin-bottom: 3rem;
-  }
-  .menu hr {
-    display: none;
   }
 }
 
@@ -597,7 +571,7 @@ body {
   font-size: 1.6rem;
 }
 
-.grid .card__content .title {
+.grid .card__heading {
   font-size: 1.7rem;
 }
 
@@ -619,7 +593,7 @@ body {
   -webkit-background-clip: text;
 }
 
-.grid .card--1 .title,
+.grid .card--1 .card__heading,
 .grid .card--1 p {
   background: rgba(0, 0, 0, 0.8);
   color: transparent;
@@ -637,7 +611,7 @@ body {
   grid-row: 2/3;
 }
 
-.grid .card--2 .title {
+.grid .card--2 .card__heading {
   background: #bb5e00;
   background: linear-gradient(162deg, #bb5e00 34%, #7c00ff 70%);
   color: transparent;
@@ -662,7 +636,7 @@ body {
   grid-row: 4/5;
 }
 
-.grid .card--3 .title {
+.grid .card--3 .card__heading {
   background: #0028a6;
   background: linear-gradient(152deg, rgba(0, 39, 166, 0.945) 42%, rgba(60, 164, 228, 0.979) 73%);
   color: transparent;
@@ -687,7 +661,7 @@ body {
   grid-row: 4/5;
 }
 
-.grid .card--4 .title {
+.grid .card--4 .card__heading {
   background: #0d9100;
   background: linear-gradient(135deg, rgba(13, 145, 0, 0.815586) 35%, rgba(33, 195, 14, 0.339395) 70%);
   color: transparent;
@@ -788,18 +762,6 @@ body {
     -ms-grid-rows: 5rem 28rem 5rem 28rem 5rem 28rem 5rem 28rem 5rem;
     -ms-grid-columns: 5% 90% 5%;
         grid-template: 5rem 28rem 5rem 28rem 5rem 28rem 5rem 28rem 5rem/ 5% 90% 5%;
-  }
-  .grid .card__content--out {
-    font-size: 1.33333rem;
-  }
-  .grid .card__content--out .title {
-    font-size: 1.41667rem;
-  }
-  .grid .card__content--in {
-    font-size: 2.05714rem;
-  }
-  .grid .card__content--in .title {
-    font-size: 2.04rem;
   }
   .grid .card--1 {
     -ms-grid-column: 2;
