--- a/pages/_accueil.scss
+++ b/pages/_accueil.scss
@@ -17,9 +17,9 @@
       align-items: center;
       position: absolute;
       font-size: $size-typo-card;
-      .title {
-        font-size: $size-typo-heading-card;
-      }
+    }
+    &__heading {
+      font-size: $size-typo-heading-card;
     }
     &--1 {
       background-color: $color-menu-1;
@@ -34,7 +34,7 @@
         );
         @include gradient-text;
       }
-      .title,
+      .card__heading,
       p {
         background: rgba(0, 0, 0, 0.8);
         @include gradient-text;
@@ -44,7 +44,7 @@
       background-color: $color-menu-2;
       grid-column: 4/5;
       grid-row: 2/3;
-      .title {
+      .card__heading {
         background: rgb(187, 94, 0);
         background: linear-gradient(
           162deg,
@@ -62,7 +62,7 @@
       background-color: $color-menu-3;
       grid-column: 2/3;
       grid-row: 4/5;
-      .title {
+      .card__heading {
         background: rgb(0, 40, 166);
         background: linear-gradient(
           152deg,
@@ -80,7 +80,7 @@
       background-color: $color-menu-4;
       grid-column: 4/5;
       grid-row: 4/5;
-      .title {
+      .card__heading {
         background: rgb(13, 145, 0);
         background: linear-gradient(
           135deg,
@@ -156,20 +156,6 @@
   .grid {
     grid-template: 5rem 28rem 5rem 28rem 5rem 28rem 5rem 28rem 5rem/ 5% 90% 5%;
     .card {
-      &__content {
-        &--out {
-          font-size: $size-typo-card/1.2;
-          .title {
-            font-size: $size-typo-heading-card/1.2;
-          }
-        }
-        &--in {
-          font-size: ($size-typo-card * 1.8)/1.4;
-          .title {
-            font-size: ($size-typo-heading-card * 1.8)/1.5;
-          }
-        }
-      }
       &--1 {
         grid-column: 2/3;
         grid-row: 2/3;
