--- a/main.css
+++ b/main.css
@@ -75,129 +75,63 @@ body {
 
 .card--1 .card__content {
   opacity: 0.6;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 600ms ease-in-out;
+  transition: all 600ms ease-in-out;
 }
 
 .card--2 .card__content {
   opacity: 0.6;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 600ms ease-in-out;
+  transition: all 600ms ease-in-out;
 }
 
 .card--3 .card__content {
   opacity: 0.6;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 600ms ease-in-out;
+  transition: all 600ms ease-in-out;
 }
 
 .card--4 .card__content {
   opacity: 0.6;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 600ms ease-in-out;
+  transition: all 600ms ease-in-out;
 }
 
-.card:hover > .card__content {
-  -webkit-animation: fade-grow 700ms ease-in-out both;
-          animation: fade-grow 700ms ease-in-out both;
-}
-
-@-webkit-keyframes fade-grow {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    opacity: 0.6;
-  }
-  100% {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-    opacity: 1;
-  }
-}
-
-@keyframes fade-grow {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    opacity: 0.6;
-  }
-  100% {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-    opacity: 1;
-  }
+.card:hover .card__content {
+  opacity: 1;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 @media (min-width: 1023px) {
-  @-webkit-keyframes fade-grow {
-    0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: scale(1.7);
-              transform: scale(1.7);
-      opacity: 1;
-    }
-  }
-  @keyframes fade-grow {
-    0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: scale(1.7);
-              transform: scale(1.7);
-      opacity: 1;
-    }
+  .card:hover .card__content {
+    -webkit-transform: scale(1.7);
+            transform: scale(1.7);
+    opacity: 1;
   }
 }
 
 @media (min-width: 490px) and (max-width: 768px) {
-  @-webkit-keyframes fade-grow {
-    0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: scale(1.7);
-              transform: scale(1.7);
-      opacity: 1;
-    }
-  }
-  @keyframes fade-grow {
-    0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: scale(1.7);
-              transform: scale(1.7);
-      opacity: 1;
-    }
+  .card:hover .card__content {
+    -webkit-transform: scale(1.7);
+            transform: scale(1.7);
+    opacity: 1;
   }
 }
 
 @media (max-width: 490px) {
-  @-webkit-keyframes fade-grow {
-    0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: scale(1.2);
-              transform: scale(1.2);
-      opacity: 1;
-    }
-  }
-  @keyframes fade-grow {
-    0% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
-      -webkit-transform: scale(1.2);
-              transform: scale(1.2);
-      opacity: 1;
-    }
+  .card:hover .card__content {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    opacity: 1;
   }
 }
 
@@ -484,7 +418,7 @@ body {
           align-items: center;
   text-align: center;
   margin-top: 6rem;
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
   font-size: 2rem;
 }
 
@@ -503,12 +437,12 @@ body {
   font-weight: bold;
   padding-left: 2rem;
   overflow-wrap: normal;
-  margin-top: 1.5rem;
 }
 
 .menu .menu__content p {
   width: 90%;
-  margin-top: 1.5rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 490px) and (max-width: 768px) {
@@ -957,7 +891,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 3rem 0 0;
+  margin: 0 1rem 0 0;
 }
 
 .menu--2 .break--1::after {
@@ -967,7 +901,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 5rem;
+  margin: 0 0 0 1rem;
 }
 
 .menu--2 .break--2::before {
@@ -977,7 +911,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 3rem 0 0;
+  margin: 0 5rem 0 0;
 }
 
 .menu--2 .break--2::after {
@@ -987,7 +921,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 3rem;
+  margin: 0 0 0 5rem;
 }
 
 .menu--2 .break--3::before {
@@ -997,7 +931,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 1rem 0 0;
+  margin: 0 3rem 0 0;
 }
 
 .menu--2 .break--3::after {
@@ -1007,7 +941,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 1rem;
+  margin: 0 0 0 3rem;
 }
 
 .menu--3 {
@@ -1047,7 +981,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 3rem 0 0;
+  margin: 0 2rem 0 0;
 }
 
 .menu--3 .break--1::after {
@@ -1057,7 +991,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 5rem;
+  margin: 0 0 0 2rem;
 }
 
 .menu--3 .break--2::before {
@@ -1067,7 +1001,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 3rem 0 0;
+  margin: 0 2rem 0 0;
 }
 
 .menu--3 .break--2::after {
@@ -1077,7 +1011,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 3rem;
+  margin: 0 0 0 2rem;
 }
 
 .menu--3 .break--3::before {
@@ -1087,7 +1021,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 1rem 0 0;
+  margin: 0 2rem 0 0;
 }
 
 .menu--3 .break--3::after {
@@ -1097,7 +1031,7 @@ h4 {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 1rem;
+  margin: 0 0 0 2rem;
 }
 
 .menu--4 {
@@ -1133,7 +1067,7 @@ h4 {
 .menu--4 .break--1::before {
   border-top: 0.5rem solid;
   content: "";
-  background: linear-gradient(135deg, rgba(13, 145, 0, 0.815586) 35%, rgba(33, 195, 14, 0.339395) 70%);
+  color: #39A52F;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -1142,7 +1076,7 @@ h4 {
 
 .menu--4 .break--1::after {
   border-top: 0.5rem solid;
-  color: #404040d5;
+  color: #39A52F;
   content: "";
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -1152,41 +1086,41 @@ h4 {
 
 .menu--4 .break--2::before {
   border-top: 0.5rem solid;
-  color: #404040d5;
+  color: #82CF7A;
   content: "";
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 3rem 0 0;
+  margin: 0 2rem 0 0;
 }
 
 .menu--4 .break--2::after {
   border-top: 0.5rem solid;
-  color: #404040d5;
+  color: #82CF7A;
   content: "";
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 3rem;
+  margin: 0 0 0 2rem;
 }
 
 .menu--4 .break--3::before {
   border-top: 0.5rem solid;
-  color: #404040d5;
+  color: #82CF7A;
   content: "";
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 1rem 0 0;
+  margin: 0 2rem 0 0;
 }
 
 .menu--4 .break--3::after {
   border-top: 0.5rem solid;
-  color: #404040d5;
+  color: #82CF7A;
   content: "";
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 0 0 1rem;
+  margin: 0 0 0 2rem;
 }
 /*# sourceMappingURL=main.css.map */
