--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -5,58 +5,23 @@
     &--#{$i} {
       .card__content {
         opacity: 0.6;
+        transform: scale(1);
+        transition: all 600ms ease-in-out;
       }
     }
   }
-  &:hover > .card__content {
-    animation: fade-grow 700ms ease-in-out both;
-  }
-}
-
-@keyframes fade-grow {
-  0% {
-    transform: scale(1);
-    opacity: 0.6;
-  }
-  100% {
-    transform: scale(1.3);
+  &:hover .card__content {
     opacity: 1;
-  }
-}
-
-@include screen-only {
-  @keyframes fade-grow {
-    0% {
-      transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
+    transform: scale(1.3);
+    @include screen-only {
       transform: scale(1.7);
       opacity: 1;
     }
-  }
-}
-
-@include tablette-only {
-  @keyframes fade-grow {
-    0% {
-      transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
+    @include tablette-only {
       transform: scale(1.7);
       opacity: 1;
     }
-  }
-}
-
-@include mobile-only {
-  @keyframes fade-grow {
-    0% {
-      transform: scale(1);
-      opacity: 0.6;
-    }
-    100% {
+    @include mobile-only {
       transform: scale(1.2);
       opacity: 1;
     }
