Maj buttons footer

--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -63,7 +63,7 @@
 .footer {
   &__btn {
     &:hover {
-      animation: wiggle 200ms linear 3 both;
+      animation: wiggle 200ms linear 3;
     }
   }
 }
